# notelog

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  test_note.md
.github/: dependabot.yml
changelog.d/: 20250508_115300_jholzfuss.md  20250508_223711_johannes_HEAD.md  20250509_102924_jholzfuss.md  20250509_110436_johannes_HEAD.md  20250509_110916_johannes_HEAD.md  20250511_112857_johannes_HEAD.md  20250511_114026_johannes_HEAD.md  20250512_130123_johannes_HEAD.md  20250512_143811_johannes_HEAD.md  20250513_110756_johannes_HEAD.md  20250513_113808_johannes_HEAD.md  20250514_103613_johannes_HEAD.md  20250515_115447_johannes_HEAD.md  20250515_121155_johannes_HEAD.md  20250516_194814_johannes_HEAD.md  20250517_124409_johannes_HEAD.md  20250519_095025_johannes_HEAD.md  20250519_113631_johannes_HEAD.md  scriv.ini
migrations/: 20250512065506_create_notes_and_tags_tables.sql  20250512070229_create_tag_triggers.sql  20250512100352_add_created_index.sql  20250514063829_add_fulltext_search.sql  20250515082524_add_note_id_index.sql
src/: cli.rs  constants.rs  error.rs  frontmatter.rs  main.rs  note.rs  tags.rs  utils.rs
src/commands/: add.rs  last.rs  mcp.rs  mod.rs
src/core/: frontmatter.rs  id.rs  mod.rs  note.rs  note_builder.rs  tags.rs
src/db/: helpers.rs  indexing.rs  mod.rs  monitoring.rs  tests.rs
src/mcp/: add_note.rs  add_note_instructions.md  calculator.rs  mod.rs  search_by_tags_instructions.md  server_instructions.md  tools.rs
src/mcp/instructions/: add_note.md  edit_tags.md  fetch_note.md  search_by_tags.md  search_notes.md  server.md
