[package]
name = "notelog"
description = "A tool for quickly logging notes from the command-line or via the Model Context Protocol."
version = "0.7.0"
edition = "2024"
license = "BlueOak-1.0.0"
keywords = ["note-taking", "mcp-server"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
dirs = "6.0.0"
notify = "8.1.0"
rand = "0.9.2"
rmcp = { version = "0.1", features = ["server", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.5", features = ["derive", "sqlite", "runtime-tokio", "migrate"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
